# learn-fastapi

./: .env.example  .gitignore  Dockerfile  pyproject.toml
src/: init_db.py  main.py
src/app/: deps.py  main.py
src/core/: config.py  database.py  security.py
src/models/: User.py  item.py
src/routes/: item.py  user.py
